--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Welcome to the zshashz’s homepage!
+description: Probably gonna keep you all updated about projects here
